allow preview plugin used by testing only